try to fix overflow bug

--- a/static/homepage/main.css
+++ b/static/homepage/main.css
@@ -88,6 +88,7 @@ body {
     border: 1px solid #000000;
     border-radius: 3px;
     margin-bottom: 20px;
+    overflow: scroll;
   }
   
   .article-title {
